--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,3 @@
 DISABLE_SWAGGER_HTTP_HANDLER=true
-GIN_MODE=release
+GIN_MODE=debug
 PG_URL=postgres://user:examplepassword@localhost:5432/e-commerce
